objects/CompetenceCaregiverAccount__c.object
<CustomObject>
    <label>Kompetenz Pflege Account</label>
    <nameField>
        <label>Kompetenz Pfleger Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kompetenzen Pflege Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Caregiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competences Caregiver Account</relationshipLabel>
        <relationshipName>KompetenzenPflegerAccount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Format: &quot;vt.contact.&lt;id&gt;.&lt;md5&gt;&quot;, having the md5 checksum from the value of the caregiver job name.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CaregiverJob__c</fullName>
        <label>Caregiver Job</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Education__c</fullName>
        <formula>IF(INCLUDES(CaregiverFurtherEducation__c,&quot;ITS/Anästhesie&quot;),&quot;ITS/Anästhesie;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;KinderITS&quot;),&quot;KinderITS (Neonatologie Level 1-3)/Kinderanästhesie;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;OP&quot;),&quot;OP;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Ambulanzdienst/Notfallmedizin&quot;),&quot;Ambulanzdienst/Notfallmedizin;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Endoskopie &amp; Herzkathetarlabor&quot;),&quot;Endoskopie &amp; Herzkathetarlabor;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Kardiothechnik&quot;),&quot;Kardiothechnik;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Onkologie/Palliativmedizin/Hospizpflege&quot;),&quot;Onkologie/Palliativmedizin/Hospizpflege;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Nephrologie/Dialyse&quot;),&quot;Nephrologie/Dialyse;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Rehabilitation und Langzeitpflege&quot;),&quot;Rehabilitation und Langzeitpflege;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Hygiene&quot;),&quot;Hygiene;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Study Nurse&quot;),&quot;Study Nurse;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Psychiatrie&quot;),&quot;Psychiatrie;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Gerontopsychiatrie&quot;),&quot;Gerontopsychiatrie;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Geriatrie&quot;),&quot;Geriatrie;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Außerklinische Beatmung&quot;),&quot;Außerklinische Beatmung;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Fachkunde 1 &amp; 2 (Sterilisation)&quot;),&quot;Fachkunde 1 &amp; 2 (Sterilisation);&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Pflegedienstleitung&quot;),&quot;Pflegedienstleitung;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Stationsleitung&quot;),&quot;Stationsleitung;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Wohnbereichsleitung&quot;),&quot;Wohnbereichsleitung;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Stroke Unit&quot;),&quot;Stroke Unit;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;IMC&quot;),&quot;IMC;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Hebamme/Entbindungspfleger/In&quot;),&quot;Hebamme/Entbindungspfleger/In;&quot;,&quot;&quot;)&amp; 
IF(INCLUDES(CaregiverFurtherEducation__c,&quot;Strahlenschutz&quot;),&quot;Strahlenschutz;&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Further Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MigrationProtocol__c</fullName>
        <label>Migration Protocol</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Competence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Competence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practical_Experience__c</fullName>
        <formula>IF(INCLUDES( CaregiverPracticalExperience__c , &quot;ITS/Anästhesie&quot;), &quot;ITS/Anästhesie;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;KinderITS (Neonatologie Level 1-3)/Kinderanästhesie&quot;), &quot;KinderITS (Neonatologie Level 1-3)/Kinderanästhesie;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;OP&quot;), &quot;OP;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Ambulanzdienst/Notfallmedizin&quot;), &quot;Ambulanzdienst/Notfallmedizin;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Endoskopie &amp; Herzkatheterlabor&quot;), &quot;Endoskopie &amp; Herzkatheterlabor;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Kardiothechnik&quot;), &quot;Kardiothechnik;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Onkologie/Palliativmedizin/Hospizpflege&quot;), &quot;Onkologie/Palliativmedizin/Hospizpflege;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Nephrologie/Dialyse&quot;), &quot;Nephrologie/Dialyse;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Rehabilitation und Langzeitpflege&quot;), &quot;Rehabilitation und Langzeitpflege;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Hygiene&quot;), &quot;Hygiene;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Study Nurse&quot;), &quot;Study Nurse;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Psychiatrie&quot;), &quot;Psychiatrie;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Gerontopsychiatrie&quot;), &quot;Gerontopsychiatrie;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Geriatrie&quot;), &quot;Geriatrie;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Außerklinische Beatmung&quot;), &quot;Außerklinische Beatmung;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Fachkunde 1 &amp; 2 (Sterilisation)&quot;), &quot;Fachkunde 1 &amp; 2 (Sterilisation);&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Pflegedienstleitung&quot;), &quot;Pflegedienstleitung;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Stationsleitung&quot;), &quot;Stationsleitung;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Wohnbereichsleitung&quot;), &quot;Wohnbereichsleitung;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Stroke Unit&quot;), &quot;Stroke Unit;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;IMC&quot;), &quot;IMC;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Hebamme/Entbindungspfleger/In&quot;), &quot;Hebamme/Entbindungspfleger/In;&quot;, &quot;&quot;)&amp; 
IF(INCLUDES( CaregiverPracticalExperience__c , &quot;Strahlenschutz&quot;), &quot;Strahlenschutz;&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practical Experience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caregiver_ZIP_Code_Area__c</fullName>
        <formula>IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;0&quot;) , &quot;0;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;1&quot;) , &quot;1;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;2&quot;) , &quot;2;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;3&quot;) , &quot;3;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;4&quot;) , &quot;4;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;5&quot;) , &quot;5;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;6&quot;) , &quot;6;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;7&quot;) , &quot;7;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;8&quot;) , &quot;8;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;9&quot;) , &quot;9;&quot;, &quot;&quot;) &amp;
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;9&quot;) , &quot;bundesweit;&quot;, &quot;&quot;) &amp; 
IF( INCLUDES(Account__r.RequestedPostalCodeRegion__c , &quot;alle&quot;) , &quot;0;1;2;3;4;5;8;9;&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caregiver ZIP Code Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaregiverFurtherEducation__c</fullName>
        <label>Caregiver Further Education</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaregiverPracticalExperience__c</fullName>
        <label>Caregiver Practical Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Praktische_Erfahrungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Count_for_Opportunity_rollup__c</fullName>
        <defaultValue>1</defaultValue>
        <label>[T] Count for Opportunity rollup</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>